@@ -20,6 +20,7 @@ Version 2.0.3
    - Output of "--help" restructured
    - Code for saving the configuration file cleaned up
    - Bugfix: Autodetection of IMAP
+   - Bugfix: Failure of select command (IMAP)
 
 Version 2.0.2
  * Some cosmetic fixes
